<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/holo_purple"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <ImageView
        android:src="@drawable/icon"
        android:layout_width="80dp"

        android:layout_height="100dp"/>
    <TextView
        android:id="@+id/answer_text_view"
        android:text="@string/question_angular"
        android:layout_width="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:padding="8dp"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="34dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/true_button"
            android:text="@string/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/false_button"
            android:text="@string/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <ImageButton
            android:id="@+id/prev_button"
            android:src="@android:drawable/ic_media_previous"
            android:contentDescription="@string/prev_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:contentDescription="@string/next_text"
            android:id="@+id/next_button"
            android:src= "@android:drawable/ic_media_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
</LinearLayout>
</LinearLayout>